Fix spacing under pager.

--- a/client/static/css/panda.css
+++ b/client/static/css/panda.css
@@ -15,6 +15,7 @@ h3 { font-weight: normal; padding-bottom: 4px; }
 
 .alert { display: none; }
 .popover .content ul li { color: black; }
+.pager { margin-bottom: 8px; }
 .pager p { font-size: 1.5em; }
 .pager h3 { float: left; margin-right: 8px; display: block; float: left; }
 .pager .pagination { margin: 0 0 8px 0; float: left; }
